--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,7 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>XIN CHÀO JAVASCRIPT</h1> 
-    <img src="/image/js.png" alt="">
+    <%=  dataUser %>
 </body>
 </html>
